msw-error.txt
FAIL features/auth/login/__test__/msw-mock.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    D:\coding\NI-console\node_modules\until-async\lib\index.js:23
    export { until };
    ^^^^^^

    SyntaxError: Unexpected token 'export'

      10 | import { http, HttpResponse } from 'msw'
      11 | import { setupServer } from 'msw/node'
    > 12 |
         | ^
      13 | const server = setupServer(
      14 |     http.post('/api/auth/login', async ({ request }) => {
      15 |         return HttpResponse.json({ success: true, message: "Logged in" })

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1314:40)
      at Object.<anonymous> (node_modules/msw/src/core/utils/handleRequest.ts:1:23)
      at Object.<anonymous> (node_modules/msw/src/core/index.ts:37:15)
      at Object.<anonymous> (features/auth/login/__test__/msw-mock.test.tsx:12:14)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.2 s
Ran all test suites matching features/auth/login/__test__/msw-mock.test.tsx.
